--- a/cypress/fixtures/blank.html
+++ b/cypress/fixtures/blank.html
@@ -3,8 +3,15 @@
 
 <head>
   <title>Blank</title>
+  <style>
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 
-<body></body>
+<body>
+  <h1 class="hidden">Hello, world!</h1>
+</body>
 
 </html>
